--- a/19.0/client/package.json
+++ b/19.0/client/package.json
@@ -2,10 +2,15 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
+  "private": true, 
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
